# Julia_Set_Simulator

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  install.sh
.github/workflows/: pages.yml
app/: BUILD.bazel  README.md  app.cpp  app.hpp  imgui_layer.cpp  imgui_layer.hpp  main.cpp  wasm_main.cpp  wasm_mt_main.cpp
common/: BUILD.bazel  README.md
common/assembler/: BUILD.bazel
common/assembler/inc/: frame_assembler.hpp
common/assembler/src/: frame_assembler.cpp
common/assembler/tst/: BUILD.bazel  test_frame_assembler.cpp
common/compute/: BUILD.bazel
common/compute/inc/: compute_proc_obj.hpp
common/compute/src/: compute_proc_obj.cpp
common/compute/tst/: BUILD.bazel  test_compute_proc_obj.cpp
common/controller/: BUILD.bazel
common/controller/inc/: frame_controller.hpp
common/controller/src/: frame_controller.cpp
common/controller/tst/: BUILD.bazel  test_frame_controller.cpp
common/inc/: messages.hpp
common/tst/: BUILD.bazel  test_utils.hpp
core/engine/: BUILD.bazel  README.md
core/engine/inc/: core_engine.hpp  message.hpp  proc_obj.hpp
core/engine/src/: core_engine.cpp  proc_obj.cpp
core/engine/src/tst/: BUILD.bazel
core/engine/tst/: BUILD.bazel  test_core_engine.cpp
patches/: BUILD.bazel  googletest_bazel9.patch  googletest_build.patch  googletest_module.patch
src/hello/: BUILD.bazel  main.cpp
web/: BUILD.bazel  index.html  style.css
