load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "compute",
    srcs = ["src/compute_proc_obj.cpp"],
    hdrs = ["inc/compute_proc_obj.hpp"],
    strip_include_prefix = "inc",
    include_prefix = "common/compute",
    deps = [
        "//common:messages",
        "//core/engine:engine",
    ],
    copts = ["-std=c++17", "-pthread"],
    visibility = ["//visibility:public"],
)
