load("@rules_cc//cc:defs.bzl", "cc_binary")
load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")

cc_binary(
    name = "hello",
    srcs = ["main.cpp"],
    copts = ["-std=c++17"],
)

wasm_cc_binary(
    name = "hello_wasm",
    cc_target = ":hello",
    visibility = ["//visibility:public"],
)
